# mcpeek

./: .gitignore  Cargo.toml  EXAMPLES.md  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: lib.rs  logging.rs  main.rs
src/mcp/: client.rs  mod.rs  protocol.rs
src/protocol/: mod.rs
src/tui/: app.rs  mod.rs  ui.rs
src/utcp/: client.rs  executor.rs  mod.rs  protocol.rs  template.rs
tests/fixtures/: cli_tools.json  simple_http.json  variables.json
